--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -13,25 +13,32 @@
     </header>
     <ion-content class="has-header">
       <ion-list>
-<!--        <ion-item nav-clear menu-close ng-click="login()">
-          Login
-        </ion-item>-->
 
         <ion-item nav-clear menu-close ui-sref="app.home">
           <i class="ion-ios7-home"></i> Home
         </ion-item>
+
         <ion-item nav-clear menu-close ui-sref="app.converter">
           <i class="ion-flask"></i> Conversion Tools
         </ion-item>
+
         <ion-item nav-clear menu-close ui-sref="app.dictionary">
           <i class="ion-android-book"></i> Dictionary
         </ion-item>
-        <ion-item nav-clear menu-close ui-sref="app.double">
-          <i class="ion-reply-all"></i> Double a Recipe
+
+        <ion-item nav-clear menu-close ui-sref="app.counter">
+          <i class="ion-android-hand"></i> Count your Scoops
         </ion-item>
+
         <ion-item nav-clear menu-close ui-sref="app.timer">
-         <i class="ion-clock"></i> Timer
+          <i class="ion-android-stopwatch"></i> Timer
         </ion-item>
+      <!--
+
+        <ion-item nav-clear menu-close ui-sref="app.timer">
+         <i class="ion-ios-alarm"></i> Timer
+       </ion-item> -->
+
       </ion-list>
     </ion-content>
   </ion-side-menu>
