--- a/www/templates/dictionary.html
+++ b/www/templates/dictionary.html
@@ -1,7 +1,7 @@
 <ion-view name="menuContent" title="Cooking Terms Dictionary">
 
     <ion-nav-buttons side="left" class="">
-      <div class="bar bar-header bar-assertive">
+      <div class="bar bar-header bar-calm">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
         <div class="title">Cooking Terms Dictionary</div>
       </div>
@@ -16,7 +16,7 @@
             </label>
         </div>
 
-    <button class="button button-assertive button-full ion-ios7-star" ng-click="toggle(favtoggle)"> Favorites</button>
+    <button class="button button-balanced button-full ion-ios7-star" ng-click="toggle(favtoggle)"> Favorites</button>
         <dl id="favlist">
           <dt>{{word}}</dt>
           <dd>{{def}}</dd>
@@ -29,17 +29,12 @@
         <dl ng-repeat="term in dictionary | filter:query">
            <div class="fav">
               <li class="item item-checkbox" ng-click="pickFavorite(term)">
-                  <label class="checkbox checkbox-assertive"> <input type="checkbox" ></label>
+                  <label class="checkbox checkbox-balanced"> <input type="checkbox" ></label>
                   <dt ng-model="term.term">{{term.term }}</dt>
                   <dd class="item-text-wrap" ng-model="term.definition">{{ term.definition }}</dd>
                </li>
            </div>
         </dl>
-
-
-
-
-
 
 
       <!--  <div class="bar bar-footer">jordanlarkin &copy; 2014</div> -->
