--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,7 +1,7 @@
 <ion-view name="menuContent" title="Home" >
 
     <ion-nav-buttons side="left" class="">
-      <div class="bar bar-header bar-assertive">
+      <div class="bar bar-header bar-calm">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
         <div class="title">Home</div>
       </div>
