--- a/www/templates/counter.html
+++ b/www/templates/counter.html
@@ -1,22 +1,24 @@
 <ion-view name="menuContent" title="Double a Recipe" class="clearfix">
 
   <ion-nav-buttons side="left" class="">
-    <div class="bar bar-header bar-assertive">
+    <div class="bar bar-header bar-calm">
       <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
       <div class="title">Count your Scoops!</div>
     </div>
   </ion-nav-buttons>
 
-    <ion-content class="has-header clearfix counter">
-
-
-          <span ng-model="count" id="display_amount" class="clearfix padding">{{num + 00 }}</span>
-
-  <div class="count_buttons">
-        <button class="button button-assertive button-block" ng-click="addUp()" >  Add </button>
-        <button class="button button-assertive button-block" ng-click="subtract()" >  Subtract </button>
-        <button class="button button-assertive button-block" ng-click="clear()" >  Clear </button>
+    <ion-content class="has-header ">
+<div class="counter">
+  <span ng-model="count" id="display_amount" class="clearfix padding">{{num + 00 }}</span>
 </div>
+
+
+
+  <div class="count_buttons ">
+        <button class="button button-calm " ng-click="addUp()" >  <span class="ion-plus"></span> </button>
+        <button class="button button-calm " ng-click="subtract()" >  <span class="ion-minus"></span> </button>
+        <button class="button button-calm " ng-click="clear()" >  Clear </button>
+  </div>
 
     </ion-content>
 </ion-view>
